--- a/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/023a-linsys-LU.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "## Reading\n",
     "\n",
-    "This section is based on ALA Ch 1.3, Ch 5.3 of Jessy Grizzles [ROB 101 notes](https://github.com/michiganrobotics/rob101/blob/main/Fall%202021/Textbook/ROB_101_December_2021_Grizzle.pdf)."
+    "This section is based on ALA Ch 1.3.  Optional: for an alternative perspective on the LU-factorization, see Ch 5.3 of Jessy Grizzles [ROB 101 notes](https://github.com/michiganrobotics/rob101/blob/main/Fall%202021/Textbook/ROB_101_December_2021_Grizzle.pdf)."
    ]
   },
   {
@@ -101,20 +101,32 @@
     "1. Solve $L\\vv z = \\vv b$ via forward substitution.\n",
     "2. Using $\\vv z$, solve $U\\vv x = \\vv z$ via back substitution.\n",
     "\n",
-    "The above is all good and well, but there's a catch!  Most linear systems we care about are posted of the form $A\\vv x = \\vv b$, where $A$ is neither lower nor upper triangular.  What we'll show in this section is an amazing fact of linear algebra: any matrix $A$ that is regular can be factored as a product of a lower triangular matrix $L$ and an upper triangular matrix $U$ such that $A=LU$.  This _matrix factorization_, the first (but not the last!) we will see in this class, is called the $LU$ factorization of a matrix (a descriptive, if not particularly creative, name)."
+    "This is exciting! We can solve systems of linear equations even if the coefficient matrix is not triangular, as long as it can be factored into a product of a lower triangular matrix and an upper triangular one.  This expands our class of \"easy to solve systems\" pretty signifcantly.  The natural next question is then of course\n",
+    "\n",
+    "> When can a square matrix $A$ be factored as $A=LU$, for $L$ and $U$ lower and upper triangular matrices, respectively?\n",
+    "<!-- Most linear systems we care about are posted of the form $A\\vv x = \\vv b$, where $A$ is neither lower nor upper triangular.  -->\n",
+    "\n",
+    "What we'll show in this section is an amazing fact of linear algebra: any matrix $A$ that is regular can be factored as a product of a lower triangular matrix $L$ and an upper triangular matrix $U$ such that $A=LU$.  This _matrix factorization_, the first (but not the last!) we will see in this class, is called the $LU$ factorization of a matrix (a descriptive, if not particularly creative, name).\n",
+    "\n",
+    "```{note} Matrix factorizations\n",
+    "Matrix factorizations, also called <wiki:Matrix_decomposition>, like the $LU$-factorization we will learn about here, play a fundamental role in linear algebra and are how all numerical implementations of linear algebra tasks (like solving a system of linear equations) are implemented in software packages like NumPy.  So while this might seem like some abstract concept at first, it is actually one of the most practical components of linear algebra that you will learn!\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4e165f6d-8d07-4f2b-8407-edaa3e9c47b1",
+   "id": "e9152ed0-e80f-4415-9c98-92e2a7afa1b7",
    "metadata": {},
    "source": [
     "## Elementary Matrices\n",
     "\n",
-    "Our starting point is the following crucial idea that underpins much of linear algebra:\n",
-    "> Operations on the rows and columns of a matrix can be realized by matrix multiplication.\n",
+    "Our starting point is the following crucial idea that underpins much of linear algebra.\n",
     "\n",
-    "So for example, our strategy in previous sections of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
+    "```{tip} Matrix multiplication can realize row operations\n",
+    "Operations on the rows and columns of a matrix can be realized by matrix multiplication.\n",
+    "```\n",
+    "\n",
+    "For example, our strategy in previous sections of adding equations together is in fact an operation that can be realized by matrix multiplication.  Our starting point will be to introduce a the idea of an _elementary matrix_, which encodes the corresponding elementary row operation.  So far we've only seen the elementary operation of adding equations together, which we recall, is equivalent to adding rows of the augmented matrix $M = [A \\, | \\, \\vv b]$ together, but we'll see other types of operations shortly.  The definition below will work for all of them.\n",
     "\n",
     "```{prf:definition} Elementary Matrix\n",
     ":label: elementary\n",
@@ -133,7 +145,7 @@
     "$$\n",
     "\\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 4 & 5 & 6 \\\\ 7 & 8 & 9 \\em = \\bm 1 & 2 & 3 \\\\ 2 & 1 & 0 \\\\ 7 & 8 & 9 \\em, \\quad \\underbrace{\\bm 1 & 0 & 0 \\\\ -2 & 1 & 0 \\\\ 0 & 0 & 1\\em}_{E_1}\\bm 1 & 2 & 3 \\\\ 1 & 2 & 3 \\\\ 1 & 2 & 3 \\em =\\bm 1 & 2 & 3 \\\\ -1 & -2 & -3 \\\\ 1 & 2 & 3 \\em .\n",
     "$$\n",
-    "Indeed it does, and by playing around with our rules of matrix arithmetic and multiplication, you should be able to convince yourself that that left multiplying _any_ 3-row matrix by $E_1$ will subtract twice its from its second row.\n",
+    "Indeed it does, and by playing around with our rules of matrix arithmetic and multiplication, you should be able to convince yourself that that left multiplying _any_ 3-row matrix by $E_1$ will subtract twice its first row from its second row.\n",
     "\n",
     "We can also use [](#elementary) to reverse engineer what row operation an elementary matrix is encoding.\n",
     "\n",
@@ -157,8 +169,68 @@
     "\n",
     "Using similar reasoning, we see that left multiplying by $E_3$ realizes adding $1/2$ the second row of a matrix to its last row.\n",
     "```\n",
-    "````\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5fee4b4-d7b5-4f0b-b2be-a3c04d47992f",
+   "metadata": {},
+   "source": [
+    "#### Python break!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "809e709f-ba98-4dc0-baa7-cfe7957cf4c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = [[1.  2.  3.  4. ]\n",
+      " [2.  4.  6.  8. ]\n",
+      " [0.5 1.  1.5 2. ]],\n",
+      " E_1A = [[1.  2.  3.  4. ]\n",
+      " [0.  0.  0.  0. ]\n",
+      " [0.5 1.  1.5 2. ]]\n",
+      "E_2A = [[ 1.   2.   3.   4. ]\n",
+      " [ 2.   4.   6.   8. ]\n",
+      " [-0.5 -1.  -1.5 -2. ]]\n",
+      "E_3A = [[1.  2.  3.  4. ]\n",
+      " [2.  4.  6.  8. ]\n",
+      " [1.5 3.  4.5 6. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "# Define the elementary matrices above\n",
     "\n",
+    "E_1 = np.array([[1., 0., 0.], [-2., 1., 0.],[0., 0., 1.]])\n",
+    "E_2 = np.array([[1., 0., 0.], [0., 1., 0.],[-1., 0., 1.]])\n",
+    "E_3 = np.array([[1., 0., 0.], [0., 1., 0.],[0., 0.5, 1.]])\n",
+    "\n",
+    "# Apply them to a 3 x 4 matrix and confirm they do what they're supposed to\n",
+    "A = np.array([[1., 2., 3., 4.],[2., 4., 6., 8.],[0.5, 1., 1.5, 2.]])\n",
+    "\n",
+    "# E1: row 2 - 2 x row 1\n",
+    "print(f'A = {A},\\n E_1A = {E_1 @ A}')\n",
+    "\n",
+    "# E2: row 3 - row 1\n",
+    "print(f'E_2A = {E_2 @ A}')\n",
+    "\n",
+    "# E3: row 3 + .5 x row 2\n",
+    "print(f'E_3A = {E_3 @ A}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd56592b-b50b-4138-8d14-e86d693cee63",
+   "metadata": {},
+   "source": [
     "### Elementary Matrices in Action\n",
     "Let us use elementary matrices to design a matrix that can help us solve linear equations.  Let's revisit the very first system of equations we encountered:\n",
     "\\begin{eqnarray}\n",
@@ -186,12 +258,64 @@
   },
   {
    "cell_type": "markdown",
-   "id": "714610d3-3167-4f05-a9c3-7804529a7074",
+   "id": "b6810c8c-4b67-4026-95d0-7fbd6b077c41",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "Let's implement the above example and confirm that we can indeed cook up a matrix $E$ such that left multiplying $A$ by $E$ gives $EA = U$ an upper triangular matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7d9b4459-8e9d-4857-a5dc-775717723317",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A = [[1. 2. 1.]\n",
+      " [2. 6. 1.]\n",
+      " [1. 1. 4.]], \n",
+      " b = [2. 7. 3.], \n",
+      " U = [[ 1.   2.   1. ]\n",
+      " [ 0.   2.  -1. ]\n",
+      " [ 0.   0.   2.5]], \n",
+      " c = [2.  3.  2.5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define A and b\n",
+    "A = np.array([[1., 2., 1.],[2., 6., 1.],[1., 1., 4.]])\n",
+    "b = np.array([2., 7., 3.])\n",
+    "\n",
+    "# Build M = [A|b]\n",
+    "M = np.hstack((A,b.reshape((3,1))))\n",
+    "\n",
+    "# Build E\n",
+    "E = E_3 @ E_2 @ E_1\n",
+    "\n",
+    "# Compute N = [U|c] = E [A|b] = EM\n",
+    "N = E @ M\n",
+    "\n",
+    "# Extract out U and c\n",
+    "U = N[:,0:3]\n",
+    "c = N[:,-1].flatten()\n",
+    "\n",
+    "print(f'A = {A}, \\n b = {b}, \\n U = {U}, \\n c = {c}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69666045-2f65-4b4b-b0e7-fb1aee58ea0d",
    "metadata": {},
    "source": [
     "### Inverse Elementary Matrix\n",
+    "Our work so far shows that we can find a matrix $E$ such that $EA = U$, for $U$ upper triangular.  This is progress, but we still haven't reached our goal of decomposing $A$ into a product $LU$ of a lower and an upper triangular matrix.  Our approach will be to look at the matrix equation $EA=U$ and find a matrix $L$ that \"undoes\" the action of left-multiplyting by $E$. \n",
     "\n",
-    "We can undo the action of an elementary matrix using the corresponding _inverse elementary matrix_. For example, to undo the action of $E_1$ (subtract twice equation 1 from equation 2), we add twice equation 1 to equation 2. The corresponding matrix is \n",
+    "Let's start by focussing on how to undo the action of an elementary matrix using its corresponding _inverse elementary matrix_. Since elmentary matrix multiplication implements simple row operations, we can intuitively figure out how to undo them.  For example, to undo the action of $E_1$ (subtract twice equation 1 from equation 2), we add twice equation 1 to equation 2. The corresponding matrix is \n",
     "$$\n",
     "L_1 = \\begin{bmatrix}\n",
     "1 & 0 & 0 \\\\\n",
@@ -213,23 +337,146 @@
     "$$\n",
     "We have $U = E_3E_2E_1A$. If we reverse the actions using $L_1L_2L_3$, we have\n",
     "$$\n",
-    "L_1L_2L_3U = L_1L_2L_3E_3E_2E_1A = L_1L_2E_2E_1A = A,\n",
+    "L_1L_2L_3U = L_1L_2L_3E_3E_2E_1A = L_1L_2E_2E_1A = L_1E_1A,\n",
     "$$\n",
-    "where we used the fact that $L_2E_2 = L_1E_1 = I$. Hence, calling $L = L_1L_2L_3$, we showed that $A = LU$. Since $L_1, L_2, L_3$ are all lower triangular, so is their product $L$. This is how we can obtain the LU facotrization of $A$ using elementary matrix operations.\n",
+    "where we used the fact that $L_2E_2 = L_1E_1 = I$. Hence, calling $L = L_1L_2L_3$, we showed that $A = LU$.  The matrix $U$ is upper triangular, butis $L$ lower triangular?  The answer is yes due to the following fundamental property of triangular matrices.\n",
     "\n",
-    "Using the $LU$ factorization explained in this page, we give a formal definition for a _regular_ matrix. \n",
+    "```{tip} Products of triangular matrices\n",
+    "Multipying a lower triangular $L_1$ matrix by another lower triangular matrix $L_2$ gives us another lower triangular matrix $L_1 L_2$ (you can and should check this on simple examples!).  Similarly, Multipying an upper triangular matrix $U_1$ by another upper triangular matrix $U_2$ gives us another lower triangular matrix $U_1 U_2$.\n",
+    "```\n",
     "\n",
-    "```{prf:definition} Regular matrix\n",
-    ":label: regular_matrix\n",
-    "A matrix $A$ is _regular_ if and only if it can be factored $A = L U$, where $L$ is a lower unitriangular matrix, having all 1’s on the diagonal, and $U$ is upper\n",
-    "triangular with nonzero diagonal entries, which are the pivots of $A$. The nonzero oﬀ-\n",
-    "diagonal entries $l_{ij}$ for $i > j$ appearing in $L$ prescribe the elementary row operations that bring $A$ into upper triangular form; namely, one subtracts $l_ij$ times row $j$ from row $i$ at the appropriate step of the Gaussian Elimination process.\n",
-    "```"
+    "Since $L_1, L_2, L_3$ are all lower triangular, so is their product $L$. Thus we have computed the LU facotrization of $A$ using elementary matrix operations."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "275feb82-bc0b-4b3a-94a4-ad5baba423d0",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "Let's double check all of the above in code.  We'll recycle the $E_i$, $U$, and $A$ from above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
+   "id": "04bb0f97-0e11-4b7a-891e-2c3f205228b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "These should all be the 3x3 identity matrix:\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]],\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]],\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "L = [[ 1.   0.   0. ]\n",
+      " [ 2.   1.   0. ]\n",
+      " [ 1.  -0.5  1. ]],\n",
+      " E=[[ 1.   0.   0. ]\n",
+      " [-2.   1.   0. ]\n",
+      " [-2.   0.5  1. ]]\n",
+      "So should this: \n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "This should be all zeros: \n",
+      " [[ 0.   0.   0. ]\n",
+      " [-3.  -9.  -1. ]\n",
+      " [-1.  -5.   2.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the inverse elementary matrices\n",
+    "L_1 = np.array([[1., 0., 0.], [2., 1., 0.],[0., 0., 1.]])\n",
+    "L_2 = np.array([[1., 0., 0.], [0., 1., 0.],[1., 0., 1.]])\n",
+    "L_3 = np.array([[1., 0., 0.], [0., 1., 0.],[0., -0.5, 1.]])\n",
+    "\n",
+    "# Confirm that they \"undo\" their corresponding elementary matrices' actions\n",
+    "print(f'These should all be the 3x3 identity matrix:\\n {L_1 @ E_1},\\n {L_2 @ E_2},\\n {L_3 @ E_3}')\n",
+    "\n",
+    "# Confirm that L = L_3 L_2 L_1 \"undoes\" the action of E\n",
+    "L = L_1 @ L_2 @ L_3\n",
+    "print(f'L = {L},\\n E={E}')\n",
+    "print(f'So should this: \\n {L @ E}')\n",
+    "\n",
+    "# Finally, let's check that A = LU\n",
+    "print(f'This should be all zeros: \\n {A - L@U}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04f928f9-df74-4bbb-8e63-2a53d2a69b0c",
+   "metadata": {},
+   "source": [
+    "## Regular matrix\n",
+    "Using the $LU$ factorization explained in this page, we can _finally_ give a formal definition of a _regular_ matrix. \n",
+    "\n",
+    "```{prf:definition} Regular matrix\n",
+    ":label: regular_matrix\n",
+    "A matrix $A$ is _regular_ if and only if it can be factored $A = L U$, where $L$ is a lower triangular matrix having all 1’s on the diagonal,[^uni] and $U$ is upper\n",
+    "triangular with nonzero diagonal entries, which are the pivots of $A$. The nonzero oﬀ-\n",
+    "diagonal entries $l_{ij}$ for $i > j$ appearing in $L$ prescribe the elementary row operations that bring $A$ into upper triangular form; namely, one subtracts $l_ij$ times row $j$ from row $i$ at the appropriate step of the Gaussian Elimination process.\n",
+    "```\n",
+    "[^uni]: A triangular matrix with all 1's on the diagonal is also called a unitriangular matrix.  The \"uni-\" prefix indicates that the diagonal should be all 1's."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe5ca19-ab27-4c87-a4ab-aa245cf3ed4b",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "Below is a simple NumPy implementation of the $LU$-factorization algorithm that we described above.  Notice that it looks very similar to our code for Gaussian elimination, but that we are keeping track of the changes we made to reduce $A$ to $U$ within the matrix $L$.  Specifically, when we subtract `scalar` times row j from row i in the line `U[i, :] = U[i, :] - scalar*U[j, :]` to perform forward elimination, we adjust the corresponding (i,j) entry of $L$ to undo this action by setting `L[i, j] = scalar`.  You should be able to convince yourself that building $L$ this way gives the same answer as computing the product $L_k L_{k-1}\\cdots L_2 L_1$ of elementary inverse matrix operations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4926592c-66e3-4943-9a07-d2f0de3975a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lu(A):\n",
+    "    \n",
+    "    #Get the number of rows\n",
+    "    n = A.shape[0]\n",
+    "    \n",
+    "    U = A.copy()\n",
+    "    L = np.eye(n, dtype=np.double)\n",
+    "    \n",
+    "    #Loop over rows\n",
+    "    for j in range(n):\n",
+    "        if U[j, j] == 0:\n",
+    "            print(\"A is not regular\")\n",
+    "            break\n",
+    "        else:\n",
+    "            for i in range(j+1, n):\n",
+    "                scalar = U[i, j]/U[j, j]\n",
+    "                U[i, :] = U[i, :] - scalar*U[j, :]\n",
+    "                L[i, j] = scalar\n",
+    "    return L, U"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "327b2daf-2148-4b57-a199-53e9c01df0d6",
+   "metadata": {},
+   "source": [
+    "Now let's test this out on our favorite linear system!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "88791b79-a3a6-4576-993c-1313c249c6f8",
    "metadata": {},
    "outputs": [
@@ -255,14 +502,12 @@
    "source": [
     "## applying LU factoriation to solve linear equations\n",
     "\n",
-    "from scipy.linalg import lu\n",
-    "import numpy as np\n",
+    "A = np.array([[2., 6., 1.],\n",
+    "              [1., 1., 4.],\n",
+    "              [1., 2., 1.]])\n",
+    "b = np.array([7., 3., 2.])\n",
+    "L, U = lu(A) # LU decomposition using scipy package\n",
     "\n",
-    "A = np.array([[2, 6, 1],\n",
-    "              [1, 1, 4],\n",
-    "              [1, 2, 1]])\n",
-    "b = np.array([7, 3, 2])\n",
-    "_, L, U = lu(A) # LU decomposition using scipy package\n",
     "print(\"\\nL: \\n\", L, \"\\nU: \\n\", U)\n",
     "\n",
     "n = A.shape[1]\n",
@@ -280,6 +525,15 @@
     "    x[i] = (z[i] - np.sum(U[i, i+1:]*x[i+1:]))/U[i, i]\n",
     "\n",
     "print(\"\\nSolution x: \\n\", x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "734af8ca-1d0d-4ae9-9347-27be47bff93f",
+   "metadata": {},
+   "source": [
+    "## Are we done?\n",
+    "Not quite! We've assumed throughout that our matrix $A$ is _regular_, which we now somewhat circularly defined as being the class of matrices for which the above $LU$-facotrization works.  But there are very simple (and easily solvable!) systems of equations for which $A$ is _not regular_.  For example, if $A$ is lower triangular, the above algorithm fails!  We'll see a very simple fix next that let's us handle a much more general class of systems with just a small tweak."
    ]
   },
   {
